tests/fixtures/invalid/list_in_int.py
# Cannot use 'in' with List[int] and Int
x: bool = [1, 2, 3] in 1
